Describe your changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,4 +8,10 @@
     src: url('/fonts/MyCustomFont-Regular.woff2') format('woff2'),
          url('/fonts/MyCustomFont')
 }
+
+/* styles/globals.css */
+html {
+    scroll-behavior: smooth;
+  }
+  
   
